# FPGA_AI_RobotArm

./: README.md
Arm/Hardware/: Base-Attachment-2.SLDPRT  Base-Attachment.SLDPRT  BottomPlate.SLDPRT  End-Effector.SLDPRT  Robot-Arm.SLDASM  Stab-rod-under.SLDPRT  Stab-rod.SLDPRT  Under-Upper-joint.SLDPRT  Under-arm.SLDPRT  Upper-Arm.SLDPRT  Upper-arm-actuator-rod.SLDPRT
Arm/Hardware/DXF/: Base-Attachment-2.DXF  Base-Attachment.DXF  End-Effector.DXF  Stab-rod.DXF  Under-Upper-joint.DXF  Under-arm.DXF  Upper-Arm.DXF  Upper-arm-actuator-rod.DXF
Datacollection/: README.md
Datacollection/Physical/Hardware/: Camera Holder Mount.SLDPRT  Data_set_collectionCamera_foto_system.STL
NeuralNetwork/: README.md
NeuralNetwork/Python_Training/: README.md  mnist_net.py  uart_test_nn.py
NeuralNetwork/Vitis_HLS/HLS_project/NN/: .cproject  .project
NeuralNetwork/Vitis_HLS/HLS_project/NN/.apc/: autopilot.apfmapping
NeuralNetwork/Vitis_HLS/HLS_project/NN/solution1/: directives.tcl  script.tcl  solution1.aps  solution1.directive  (+1 more)
PoseEstimation/: README.md  angle_detection_class.py
Report/Videos/: QVideo_learning_NN_python.webm  README.md
ros_ws/src/movement_control/: functional_configuration.toml  package.xml  setup.cfg  setup.py
ros_ws/src/movement_control/launch/: movement_control_launch.py
ros_ws/src/movement_control/movement_control/: __init__.py  movement_control.py  ros_node.py
ros_ws/src/movement_control/movement_control/utils/: motorController.py  moveArm.py
ros_ws/src/movement_control/tests/: test_node.py
ros_ws/src/pose_estimate/: pose_estimation_node.py
(+156 files in other folders)
